--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVPNotificationApp">
-        <activity android:name="com.unex.android.mvp_notificationapp.ui.addnotification.AddNotif"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.unex.android.mvp_notificationapp.ui.addnotification.AddNotif">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
